--- a/gateway/core/pom.xml
+++ b/gateway/core/pom.xml
@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravity</groupId>
+        <groupId>io.gravitee</groupId>
         <artifactId>gateway</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravity</groupId>
+    <groupId>io.gravitee</groupId>
     <artifactId>core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>Gravity IO - API Management - Core</name>
+    <name>Gravitee IO - API Management - Core</name>
 
     <dependencies>
         <dependency>
