--- a/gateway/platforms/pom.xml
+++ b/gateway/platforms/pom.xml
@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravity</groupId>
+        <groupId>io.gravitee</groupId>
         <artifactId>gateway</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravity</groupId>
+    <groupId>io.gravitee</groupId>
     <artifactId>platforms</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Gravity IO - API Management - Platforms</name>
+    <name>Gravitee IO - API Management - Platforms</name>
 
     <modules>
         <module>servlet</module>
@@ -23,7 +23,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.gravity</groupId>
+            <groupId>io.gravitee</groupId>
             <artifactId>core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
