--- a/gateway/platforms/servlet/pom.xml
+++ b/gateway/platforms/servlet/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravity</groupId>
+        <groupId>io.gravitee</groupId>
         <artifactId>platforms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravity</groupId>
+    <groupId>io.gravitee</groupId>
     <artifactId>servlet</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Gravity IO - API Management - Servlet</name>
+    <name>Gravitee IO - API Management - Servlet</name>
 
     <dependencies>
         <!-- Logging -->
