--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
         <version>1.0.2</version>
     </parent>
 
-    <groupId>io.gravity</groupId>
+    <groupId>io.gravitee</groupId>
     <artifactId>parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Gravity IO - API Management</name>
+    <name>Gravitee IO - API Management</name>
 
     <modules>
         <module>model</module>
