--- a/gateway/core/pom.xml
+++ b/gateway/core/pom.xml
@@ -34,6 +34,13 @@
     <name>Gravitee IO - API Management - Core</name>
 
     <dependencies>
+        <!-- Gravitee internal dependencies -->
+        <dependency>
+            <groupId>io.gravitee</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -53,6 +60,13 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-client</artifactId>
             <version>9.2.10.v20150310</version>
+        </dependency>
+
+        <!-- Jackson dependencies -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- Unit Tests -->
