--- a/model/pom.xml
+++ b/model/pom.xml
@@ -32,4 +32,12 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <name>Gravitee IO - API Management - Model</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+    </dependencies>
 </project>
