--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,6 @@
     <properties>
         <slf4j.version>1.7.12</slf4j.version>
         <logback.version>1.1.3</logback.version>
+        <jackson.version>2.5.3</jackson.version>
     </properties>
 </project>
