refactor: Add RxJava in place of home made AsyncHandler

--- a/gateway/core/pom.xml
+++ b/gateway/core/pom.xml
@@ -41,6 +41,11 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
