--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -46,10 +46,22 @@
                 <artifactId>rxjava</artifactId>
                 <version>${rxjava.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>${mongo.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <properties>
+        <guava.version>18.0</guava.version>
+        <mongo.version>3.0.1</mongo.version>
         <rxjava.version>1.0.11</rxjava.version>
     </properties>
 </project>
