--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -49,7 +49,18 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <!-- Unit Tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <properties>
         <rxjava.version>1.0.11</rxjava.version>
+        <junit.version>4.12</junit.version>
     </properties>
 </project>
