--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -37,6 +37,7 @@
         <module>api</module>
         <module>core</module>
         <module>platforms</module>
+        <module>registry</module>
     </modules>
 
     <dependencyManagement>
