--- a/gateway/api/pom.xml
+++ b/gateway/api/pom.xml
@@ -27,9 +27,18 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.gateway</groupId>
     <artifactId>api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>Gravitee IO - API Management - API</name>
+
+    <dependencies>
+        <!-- Gravitee internal dependencies -->
+        <dependency>
+            <groupId>io.gravitee</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
