--- a/gateway/core/pom.xml
+++ b/gateway/core/pom.xml
@@ -27,7 +27,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.gateway</groupId>
     <artifactId>core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -38,6 +38,12 @@
         <dependency>
             <groupId>io.gravitee</groupId>
             <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.gateway</groupId>
+            <artifactId>api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
