--- a/gateway/platforms/jetty/pom.xml
+++ b/gateway/platforms/jetty/pom.xml
@@ -22,12 +22,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravitee</groupId>
+        <groupId>io.gravitee.gateway</groupId>
         <artifactId>platforms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.gateway</groupId>
     <artifactId>jetty</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - Jetty Valve</name>
@@ -35,12 +35,12 @@
     <dependencies>
         <!-- Gravity -->
         <dependency>
-            <groupId>io.gravitee</groupId>
+            <groupId>io.gravitee.gateway</groupId>
             <artifactId>core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.gravitee</groupId>
+            <groupId>io.gravitee.gateway</groupId>
             <artifactId>servlet</artifactId>
             <version>${project.version}</version>
         </dependency>
