--- a/gateway/platforms/pom.xml
+++ b/gateway/platforms/pom.xml
@@ -27,7 +27,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.gateway</groupId>
     <artifactId>platforms</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -40,7 +40,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.gravitee</groupId>
+            <groupId>io.gravitee.gateway</groupId>
             <artifactId>core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
