--- a/gateway/registry/mongodb/pom.xml
+++ b/gateway/registry/mongodb/pom.xml
@@ -22,12 +22,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravitee</groupId>
+        <groupId>io.gravitee.gateway.registry</groupId>
         <artifactId>registry</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.gateway.registry</groupId>
     <artifactId>mongodb</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - MongoDB</name>
@@ -35,7 +35,7 @@
     <dependencies>
         <!-- Gravitee dependencies -->
         <dependency>
-            <groupId>io.gravitee</groupId>
+            <groupId>io.gravitee.gateway</groupId>
             <artifactId>core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
