--- a/gateway/registry/pom.xml
+++ b/gateway/registry/pom.xml
@@ -27,7 +27,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.gateway.registry</groupId>
     <artifactId>registry</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
