--- a/gateway/platforms/jetty/pom.xml
+++ b/gateway/platforms/jetty/pom.xml
@@ -30,7 +30,7 @@
     <groupId>io.gravitee.gateway</groupId>
     <artifactId>jetty</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Gravitee IO - API Management - Jetty Valve</name>
+    <name>Gravitee IO - API Management - Gateway Platforms - Jetty Valve</name>
 
     <dependencies>
         <!-- Gravity -->
