--- a/gateway/platforms/servlet/pom.xml
+++ b/gateway/platforms/servlet/pom.xml
@@ -30,7 +30,7 @@
     <groupId>io.gravitee.gateway</groupId>
     <artifactId>servlet</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Gravitee IO - API Management - Servlet</name>
+    <name>Gravitee IO - API Management - Gateway Platforms - Servlet</name>
 
     <dependencies>
         <!-- Gravity -->
