--- a/gateway/registry/pom.xml
+++ b/gateway/registry/pom.xml
@@ -31,7 +31,7 @@
     <artifactId>registry</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Gravitee IO - API Management - Registry</name>
+    <name>Gravitee IO - API Management - Gateway Registry</name>
 
     <modules>
         <module>mongodb</module>
