--- a/admin/console/pom.xml
+++ b/admin/console/pom.xml
@@ -27,9 +27,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.gravitee</groupId>
+    <groupId>io.gravitee.admin</groupId>
     <artifactId>admin-console</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Gravitee IO - API Management - Admin Console</name>
+    <name>Gravitee IO - API Management - Admin - Console</name>
 </project>
