--- a/admin/api/pom.xml
+++ b/admin/api/pom.xml
@@ -57,20 +57,15 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
         </dependency>
-        <!-- JAX RS dependencies -->
+        <!-- Jersey dependencies -->
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>jsr311-api</artifactId>
-            <version>${jsr311-api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-servlet</artifactId>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-moxy</artifactId>
             <version>${jersey.version}</version>
         </dependency>
         <!-- Jetty dependencies -->
@@ -82,7 +77,7 @@
     </dependencies>
 
     <properties>
-        <jersey.version>1.19</jersey.version>
+        <jersey.version>2.17</jersey.version>
         <jsr311-api.version>1.1.1</jsr311-api.version>
     </properties>
 </project>
