--- a/common/pom.xml
+++ b/common/pom.xml
@@ -32,4 +32,12 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <name>Gravitee IO - API Management - Common</name>
+
+    <dependencies>
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
