--- a/gateway/registry/mongodb/pom.xml
+++ b/gateway/registry/mongodb/pom.xml
@@ -32,17 +32,22 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - MongoDB</name>
 
+    <properties>
+        <mongo.version>3.0.1</mongo.version>
+    </properties>
+
     <dependencies>
         <!-- Gravitee dependencies -->
         <dependency>
             <groupId>io.gravitee.gateway</groupId>
             <artifactId>core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- MongoDB dependencies -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo.version}</version>
         </dependency>
     </dependencies>
 </project>
