chore: Preparing distribution module for GraviteeIO Gateway based on Jetty embedded

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>common</module>
         <module>gateway</module>
         <module>admin</module>
+        <module>distribution</module>
     </modules>
 
     <build>
