--- a/gateway/registry/mongodb/src/test/resources/conf/mongodb.properties
+++ b/gateway/registry/mongodb/src/test/resources/conf/mongodb.properties
@@ -1,3 +1,3 @@
-host=91.121.136.43
-port=27059
-database=gravitee
+gravitee.io.mongdb.host=91.121.136.43
+gravitee.io.mongdb.port=27059
+gravitee.io.mongdb.database=gravitee
