--- a/gateway/platforms/servlet/pom.xml
+++ b/gateway/platforms/servlet/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.gravitee</groupId>
+        <groupId>io.gravitee.gateway</groupId>
         <artifactId>platforms</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
