--- a/admin/console/package.json
+++ b/admin/console/package.json
@@ -8,14 +8,11 @@
     "systemjs": "0.16.11"
   },
   "devDependencies": {
-    "cssnext": "1.6.0",
-    "cssnano": "1.3.1",
     "gulp": "3.8.11",
     "gulp-concat": "2.5.2",
     "gulp-rename": "1.2.2",
     "gulp-shell": "0.4.1",
     "gulp-traceur": "0.17.1",
-    "gulp-webserver": "0.9.0",
-    "gulp-postcss": "5.1.8"
+    "gulp-webserver": "0.9.0"
   }
 }
