--- a/pom.xml
+++ b/pom.xml
@@ -116,5 +116,6 @@
         <jetty.version>9.2.10.v20150310</jetty.version>
         <logback.version>1.1.3</logback.version>
         <slf4j.version>1.7.12</slf4j.version>
+        <spring.version>4.1.6.RELEASE</spring.version>
     </properties>
 </project>
