--- a/gateway/platforms/servlet/pom.xml
+++ b/gateway/platforms/servlet/pom.xml
@@ -40,6 +40,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>io.reactivex</groupId>
             <artifactId>rxjava</artifactId>
