--- a/admin/api/pom.xml
+++ b/admin/api/pom.xml
@@ -40,6 +40,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.gravitee</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.gravitee.gateway.registry</groupId>
             <artifactId>mongodb</artifactId>
             <version>${project.version}</version>
