refactor: Add public URI to an API and use the path of URI as API context path

--- a/gateway/registry/mongodb/pom.xml
+++ b/gateway/registry/mongodb/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>core</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.gravitee</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- MongoDB dependencies -->
         <dependency>
             <groupId>org.mongodb</groupId>
