--- a/gateway/platforms/jetty/pom.xml
+++ b/gateway/platforms/jetty/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- HTTP Client for testing -->
         <dependency>
