refactor: Added unit tests for MongoDB registry

--- a/gateway/registry/mongodb/pom.xml
+++ b/gateway/registry/mongodb/pom.xml
@@ -33,7 +33,10 @@
     <name>Gravitee IO - API Management - MongoDB</name>
 
     <properties>
+        <embed.mongo.version>1.47.3</embed.mongo.version>
+        <embedmongo-maven-plugin.version>0.1.12</embedmongo-maven-plugin.version>
         <mongo.version>3.0.1</mongo.version>
+        <powermock.version>1.6.2</powermock.version>
     </properties>
 
     <dependencies>
@@ -56,5 +59,51 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>${mongo.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>${embed.mongo.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.joelittlejohn.embedmongo</groupId>
+                <artifactId>embedmongo-maven-plugin</artifactId>
+                <version>${embedmongo-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>start</id>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
