--- a/gateway/core/pom.xml
+++ b/gateway/core/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-client</artifactId>
-            <version>9.2.10.v20150310</version>
+            <version>${jetty.version}</version>
         </dependency>
 
         <!-- Jackson dependencies -->
