refactor: Redefine server request / response

--- a/gateway/api/pom.xml
+++ b/gateway/api/pom.xml
@@ -40,5 +40,11 @@
             <artifactId>model</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.gravitee</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
