--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,6 @@
         <logback.version>1.1.3</logback.version>
         <slf4j.version>1.7.12</slf4j.version>
         <spring.version>4.1.6.RELEASE</spring.version>
+        <mockito.version>1.10.19</mockito.version>
     </properties>
 </project>
