--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,8 @@
                         <exclude>src/test/resources/**</exclude>
                         <exclude>src/main/resources/**</exclude>
                         <exclude>node_modules/**</exclude>
-                        <exclude>build/**</exclude>
+                        <exclude>dist/**</exclude>
+                        <exclude>typings/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
