--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.open-esb</groupId>
+        <groupId>io.gravitee</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee</groupId>
