--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,7 +23,7 @@
 
     <parent>
         <groupId>io.gravitee</groupId>
-        <artifactId>gravitee-parent</artifactId>
+        <artifactId>gateway-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
