--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <groupId>io.gravitee.admin</groupId>
-    <artifactId>rest</artifactId>
+    <artifactId>gateway-admin-rest</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - Admin - Rest API</name>
 
