refactor: Typo on poms

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <groupId>io.gravitee.gateway</groupId>
-    <artifactId>api</artifactId>
+    <artifactId>gateway-api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <name>Gravitee IO - API Management - Gateway API</name>
@@ -36,14 +36,14 @@
     <dependencies>
         <!-- Gravitee internal dependencies -->
         <dependency>
-            <groupId>io.gravitee</groupId>
-            <artifactId>model</artifactId>
+            <groupId>io.gravitee.model</groupId>
+            <artifactId>gravitee-model</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee</groupId>
-            <artifactId>common</artifactId>
+            <groupId>io.gravitee.common</groupId>
+            <artifactId>gravitee-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
