--- a/platforms/pom.xml
+++ b/platforms/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <groupId>io.gravitee.gateway</groupId>
-    <artifactId>platforms</artifactId>
+    <artifactId>gateway-platforms</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gravitee IO - API Management - Gateway Platforms</name>
@@ -40,8 +40,8 @@
     <dependencies>
         <dependency>
             <groupId>io.gravitee.gateway</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <artifactId>gateway-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
