--- a/registry/mongodb/pom.xml
+++ b/registry/mongodb/pom.xml
@@ -23,12 +23,12 @@
 
     <parent>
         <groupId>io.gravitee.gateway.registry</groupId>
-        <artifactId>registry</artifactId>
+        <artifactId>gateway-registry</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.gateway.registry</groupId>
-    <artifactId>mongodb</artifactId>
+    <artifactId>gateway-mongodb</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Gravitee IO - API Management - MongoDB</name>
 
@@ -43,13 +43,13 @@
         <!-- Gravitee dependencies -->
         <dependency>
             <groupId>io.gravitee.gateway</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>gateway-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.gravitee</groupId>
-            <artifactId>model</artifactId>
+            <groupId>io.gravitee.model</groupId>
+            <artifactId>gravitee-model</artifactId>
             <version>${project.version}</version>
         </dependency>
 
