refactor: Remove guava to use java 8 lambdas/streams

--- a/gateway-platforms/pom.xml
+++ b/gateway-platforms/pom.xml
@@ -34,7 +34,7 @@
     <name>Gravitee IO - API Management - Gateway Platforms</name>
 
     <modules>
-        <module>servlet</module>
+        <module>gateway-servlet</module>
     </modules>
 
     <dependencies>
