--- a/gateway-registry/pom.xml
+++ b/gateway-registry/pom.xml
@@ -34,6 +34,6 @@
     <name>Gravitee IO - API Management - Gateway Registry</name>
 
     <modules>
-        <module>mongodb</module>
+        <module>gateway-mongodb</module>
     </modules>
 </project>
