--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
     <name>Gravitee IO - API Management</name>
 
     <modules>
-        <module>api</module>
-        <module>core</module>
-        <module>platforms</module>
-        <module>registry</module>
+        <module>gateway-api</module>
+        <module>gateway-core</module>
+        <module>gateway-platforms</module>
+        <module>gateway-registry</module>
     </modules>
 
     <dependencyManagement>
@@ -57,12 +57,6 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>${logback.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
             </dependency>
 
             <dependency>
@@ -86,7 +80,6 @@
     <properties>
         <rxjava.version>1.0.11</rxjava.version>
         <junit.version>4.12</junit.version>
-        <guava.version>18.0</guava.version>
         <jackson.version>2.5.3</jackson.version>
         <jetty.version>9.2.11.v20150529</jetty.version>
         <logback.version>1.1.3</logback.version>
