--- a/gravitee-gateway-core/src/test/resources/gravitee.yml
+++ b/gravitee-gateway-core/src/test/resources/gravitee.yml
@@ -3,8 +3,8 @@
 node:
   home: ${gravitee.home}
 
-policy:
-  workspace: ${node.home}/io/gravitee/gateway/core/policy/workspace
+plugin:
+  workspace: ${node.home}/io/gravitee/gateway/core/plugin/workspace
 
 repository:
   file:
