chore: Apply changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 *.jar
 *.war
 *.ear
+*.iml
+.DS_Store
+
+target/
+.idea/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
