feat(spring-context) : set spring context inside web.xml file

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>io.gravitee.admin.api.security.config.SecurityConfig</param-value>
+		<param-value>io.gravitee.management.api.GraviteeContextConfiguration</param-value>
 	</context-param>
 	
 	<context-param>
